Fix library loading on Bungee and Velocity, bump to 1.2